# moviecaps

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
gallery/: admin.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
gallery/management/commands/: upload_caps.py
gallery/migrations/: 0001_initial.py  0002_screencap_tags_alter_title_slug.py  0003_screencap_height_screencap_width_and_more.py  0004_title_poster.py  0005_alter_title_type.py
gallery/templates/: 404.html  500.html  base.html
gallery/templates/gallery/: about.html  home.html  search.html  title_detail.html
gallery/templates/gallery/includes/: _pagination.html  _popular_tags.html  _screencap_card.html  _screencaps_loop.html
static/css/: style.css
