[project]
name = "moviecaps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.2",
    "django-autoslug>=1.9.9",
    "django-debug-toolbar>=6.2.0",
    "django-imagekit>=6.1.0",
    "django-taggit>=6.1.0",
    "environs[django]>=14.5.0",
    "gunicorn>=25.3.0",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.15.0",
    "whitenoise[brotli]>=6.12.0",
]

[tool.ruff.lint]
extend-select = ["I"]
